# pi-science

./: .gitignore  ATOMIC_IMPROVEMENT_PLAN.md  CHANGELOG.md  DEPLOYMENT.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: PROJECT.md  config.py  main.py  package-lock.json  package.json  pyproject.toml
backend/api/: __init__.py  agent_profiles.py  artifacts.py  bookmarks.py  citations.py  compute.py  endpoints.py  figures.py  files.py  jobs.py  kernels.py  literature.py  mcp.py  notebooks.py  pdfs.py  project_knowledge.py  project_memory.py  provenance.py  result_reviews.py  runs.py  sessions.py  settings.py  skills.py  workspaces.py
backend/models/: __init__.py  agent_profile.py  citation.py  compute.py  literature.py  mcp.py  project_knowledge.py  research_memory.py  skill.py
backend/pi_science/: __init__.py  cli.py
backend/scripts/: pi_model_capabilities.mjs
backend/services/: __init__.py  artifact_store.py  artifact_verifier.py  bookmarker.py  citation_service.py  compute_providers.py  compute_service.py  content_guard.py  egress_gateway.py  egress_policy.py  event_normalizer.py  figure_composer.py  file_organizer.py  file_service.py  job_coordinator.py  kernel_manager.py  large_file.py  literature_service.py  mcp_catalog.py  model_endpoint_service.py  model_registry.py  pdf_index.py  pi_event_observer.py  pi_manager.py  pi_model_capabilities.py  pi_runtime_config.py  preview_registry.py  project_knowledge_store.py  project_memory.py  provenance_store.py  remote_compute_service.py  research_loop_policy.py  (+15 more)
(+220 files in other folders)
