[project]
name = "pi-science"
version = "0.1.0"
description = "Scientific AI Workbench — powered by the pi agent runtime"
requires-python = ">=3.11"
readme = { text = "Pi-Science FastAPI backend and local scientific runtime.", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Pi-Science Contributors" }
]
keywords = ["ai", "science", "agent", "llm", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "aiofiles>=24.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[project.scripts]
pi-science = "pi_science.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "services*", "models*", "pi_science*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
